--- a/Details1.html
+++ b/Details1.html
@@ -33,132 +33,133 @@
 
 
 	<!-- Main -->
-		<div id="main-wrapper">
-			<div class="container">
-				<div class="row gtr-200">
-					<div class="col-4 col-12-medium">
+		<article id="portfolio" class="wrapper style2">
+			<div id="main-wrapper">
+				<div class="container">
+					<div class="row gtr-200">
+						<div class="col-4 col-12-medium">
 
-						<!-- Sidebar -->
-						<div id="sidebar">
-							<section class="widget thumbnails">
-								<h3>Interesting stuff</h3>
-								<div class="grid">
-									<div class="row gtr-15">
-										<div class="col-6"><a href="images/portfolio_thumbnails/abuelasspacebistro.png" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
-										<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+							<!-- Sidebar -->
+							<div id="sidebar">
+								<section class="widget thumbnails">
+									<h3>Interesting stuff</h3>
+									<div class="grid">
+										<div class="row gtr-15">
+											<div class="col-6"><a href="images/portfolio_thumbnails/abuelasspacebistro.png" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+											<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+											<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+											<div class="col-6"><a href="#" class="image fit"><img src="images/portfolio_thumbnails/abuelasspacebistro.png" alt="" /></a></div>
+										</div>
 									</div>
-								</div>
-								<a href="#" class="button icon fa-file-alt">More</a>
-							</section>
+									<a href="#" class="button icon fa-file-alt">More</a>
+								</section>
+							</div>
+
+						</div>
+						<div class="col-8 col-12-medium imp-medium">
+
+							<!-- Content -->
+							<div id="content">
+								<section class="last">
+									<h2>So what's this all about?</h2>
+									<p>
+										This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
+										Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)
+									</p>
+									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
+									<a href="#" class="button icon solid fa-arrow-circle-right">Continue Reading</a>
+								</section>
+							</div>
+
 						</div>
 
 					</div>
-								<div class="col-8 col-12-medium imp-medium">
-
-									<!-- Content -->
-									<div id="content">
-										<section class="last">
-											<h2>So what's this all about?</h2>
-											<p>
-												This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
-												Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)
-											</p>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-											<a href="#" class="button icon solid fa-arrow-circle-right">Continue Reading</a>
-										</section>
-									</div>
-
-								</div>
-		
 				</div>
 			</div>
-		</div>
 
 
 
-						<article>
-							<div class="col-12">
-								<hr />
-								<h3>Find me on ...</h3>
-								<ul class="social">
+			<article>
+				<div class="col-12">
+					<hr />
+					<h3>Find me on ...</h3>
+					<ul class="social">
 
-									<!--							<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>			-->
-									<li><a href="https://www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” title="LinkedIn"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank” title="Itch.io"><span class="label">Itch.io 1</span></a></li>
-									<li><a href="https://discordapp.com/users/195173830937935872" class="icon brands fa-discord" title="Discord: Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
-									<li><a href="https://www.behance.net/nielisson" class="icon brands fa-behance" title="Behance" target=”_blank”><span class="label">Behance</span></a></li>
+						<!--							<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>			-->
+						<li><a href="https://www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” title="LinkedIn"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank” title="Itch.io"><span class="label">Itch.io 1</span></a></li>
+						<li><a href="https://discordapp.com/users/195173830937935872" class="icon brands fa-discord" title="Discord: Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
+						<li><a href="https://www.behance.net/nielisson" class="icon brands fa-behance" title="Behance" target=”_blank”><span class="label">Behance</span></a></li>
 
 
-									<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<!--
+				<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
+				<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
+				<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
+				<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
+				<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
+				<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
+				<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
+				<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
+				<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
+				<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+				<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
+				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 
-								-->
-								</ul>
-								<hr />
-							</div>
+				-->
+					</ul>
+					<hr />
+				</div>
 
-							<footer>
-								<div class="container" style="align-content: center; contain">
-									<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-									<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
-								</div>
+				<footer>
+					<div class="container" style="align-content: center; contain">
+						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
+					</div>
 
-								<ul id="copyright">
-									<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li>
-									<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
+					<ul id="copyright">
+						<li><font size="2">&copy; Nielisson Mendonça. All rights reserved.</li>
+						<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
 
-								</ul>
-							</footer>
+					</ul>
+				</footer>
 
-						</article>
+			</article>
 
-						<!-- Botao Scroll UP
+			<!-- Botao Scroll UP
 
-									<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
+					<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/Icons/top_btn.png" height="30px" height="30px"></button>
 
-									<script>
-										//Get the button
-										var mybutton = document.getElementById("myBtn");
+					<script>
+						//Get the button
+						var mybutton = document.getElementById("myBtn");
 
-										// When the user scrolls down 20px from the top of the document, show the button
-										window.onscroll = function () { scrollFunction() };
+						// When the user scrolls down 20px from the top of the document, show the button
+						window.onscroll = function () { scrollFunction() };
 
-										function scrollFunction() {
-											if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-												mybutton.style.display = "block";
-											} else {
-												mybutton.style.display = "none";
-											}
-										}
+						function scrollFunction() {
+							if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+								mybutton.style.display = "block";
+							} else {
+								mybutton.style.display = "none";
+							}
+						}
 
-										// When the user clicks on the button, scroll to the top of the document
-										function topFunction() {
-											document.body.scrollTop = 0;
-											document.documentElement.scrollTop = 0;
-										}
-									</script>
+						// When the user clicks on the button, scroll to the top of the document
+						function topFunction() {
+							document.body.scrollTop = 0;
+							document.documentElement.scrollTop = 0;
+						}
+					</script>
 
-					<End of the script for the button -->
-						<!-- Scripts -->
-						<script src="assets/js/jquery.min.js"></script>
-						<script src="assets/js/jquery.scrolly.min.js"></script>
-						<script src="assets/js/browser.min.js"></script>
-						<script src="assets/js/breakpoints.min.js"></script>
-						<script src="assets/js/util.js"></script>
-						<script src="assets/js/main.js"></script>
-
+	<End of the script for the button -->
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+		</article>
 	</body>
 </html>
