--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 							<section class="box style1">
 								<h3>Softwares, Tools and More</h3>
 								<ul>
-									<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator and Dragon Bones</li>
+									<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator, 2D animation (Unity) and Dragon Bones</li>
 									<li><b>3D art:</b> Blender and ArmorPaint</li>
 									<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
 									<li><b>Game engines:</b> Unity and Unreal Engine</li>
