--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Nielisson Mendonça: Game Designer and 3D/2D Artist</title>
+		<title>Nielisson Mendonça: 3D/2D Artist,UI/UX and Game Designer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta itemprop="name" content="Nielisson Mendonça - Game Designer and 2D/3D Artist">
+		<meta itemprop="name" content="Nielisson Mendonça - 3D/2D Artist,UI/UX and Game Designer">
 		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/photo.png"/>
 		<meta name="description" content="I've worked on many serious games and games for console/PC. 
 		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
@@ -465,6 +465,41 @@
 							<center>
 								<a href="/documents/GDD_02_Unusual Adventure.pdf" class="button small scrolly" target="_blank">GDD</a>
 								<a href="/documents/LD_01_Unusual_Adventures_Maps.pdf" class="button small scrolly" target="_blank">Level Design</a>
+							</center>
+
+						</article>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="/documents/GDD_08_Kolor_Realm.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/thumbnail_kolor_realm.png" alt="Kolor Realm" /></a>
+							<h3><a href="/documents/GDD_08_Kolor_Realm.pdf" target="_blank">Kolor Realm - Game Design</a></h3>
+							<p>Professional project - 05/2022</p>
+							<p>
+								I've written the Game Design Document for this mobile game, with a focus on the level design.
+							</p>
+							<p>Roles: <font color=#f06f4f>Game and Level Design</font></b></p>
+							<p>Solo project</p>
+							<center>
+								<a href="/documents/GDD_08_Kolor_Realm.pdf" class="button small scrolly" target="_blank">GDD</a>
+							</center>
+
+						</article>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="/documents/GDD_07_Potion_Perplexion.pdf" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/potion_perplexion.png" alt="Potion Perplexion" /></a>
+							<h3><a href="/documents/GDD_07_Potion_Perplexion.pdf" target="_blank">Potion Perplexion - Game Design</a></h3>
+							<p>Professional project - 02/2022</p>
+							<p>
+								I've wrote the Game Design Document for this mobile game, including the art direction.
+							</p>
+							<p>Roles: <font color=#f06f4f>Game Design</font></b></p>
+							<p>Solo project</p>
+							<center>
+								<a href="/documents/GDD_07_Potion_Perplexion.pdf" class="button small scrolly" target="_blank">GDD</a>
+								<a href="https://play.google.com/store/apps/details?id=com.metiscoda.potionperplexion" class="button small scrolly" target="_blank">Play</a>
 							</center>
 
 						</article>
