--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<article class="box style2">
 							<a href="https://store.steampowered.com/app/606880/GreedFall/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
 							<h3><a href="https://store.steampowered.com/app/606880/GreedFall/" target="_blank">Greedfall</a></h3>
-							<p style="font-size: small;"><i>(PC, XBOX One and PS4)</i></p>
+							<p style="font-size: small;"><i>PC, XBOX One and PS4</i></p>
 							<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 							<p>Role: <b><font color=#a85265>GUI artist and Integrator (internship)</font> </b></p>
 							<p>Team composition: 192 people</p>
@@ -227,18 +227,19 @@
 							<a href="https://nielisson.itch.io/sanctuary-by-the-sea" class="button small scrolly" target="_blank">Play</a>
 						</article>
 					</div>
-
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
-							<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
-							<p style="font-size: small;"><i>Student project - 12/2018</i></p>
-							<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
-							<p>Team composition: 2 people</p>
-							<center><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a></center>
-						</article>
-					</div>
+	
+	<!--
+	<div class="col-4 col-6-medium col-12-small">
+		<article class="box style2">
+			<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+			<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+			<p style="font-size: small;"><i>Student project - 12/2018</i></p>
+			<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
+			<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+			<p>Team composition: 2 people</p>
+			<center><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a></center>
+		</article>
+	</div>-->
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
