--- a/index.html
+++ b/index.html
@@ -226,19 +226,19 @@
 							<a href="https://nielisson.itch.io/sanctuary-by-the-sea" class="button small scrolly" target="_blank">Play</a>
 						</article>
 					</div>
-	
-	<!--
-	<div class="col-4 col-6-medium col-12-small">
-		<article class="box style2">
-			<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
-			<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
-			<p style="font-size: small;"><i>Student project - 12/2018</i></p>
-			<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
-			<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
-			<p>Team composition: 2 people</p>
-			<center><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a></center>
-		</article>
-	</div>-->
+
+					<!--
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+						<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+						<p style="font-size: small;"><i>Student project - 12/2018</i></p>
+						<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+						<p>Team composition: 2 people</p>
+						<center><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a></center>
+					</article>
+				</div>-->
 
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
@@ -545,72 +545,72 @@
 		</article>
 
 
-		<!-- Other prototypes -->
-		<article id="other-prototypes" class="wrapper style3">
-			<div class="container">
-				<header>
-					<h2>Other Prototypes</h2>
-					<p style="color: #262626;">These are some of my most experimental games.</p>
-				</header>
-				<div class="row">
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Instant T" /></a>
-							<h3><a href="https://nielisson.itch.io/linstant-t-companion-app" target="_blank">Instant T</a></h3>
-							<p>Student project - 08/2020</p>
-							<p>This is a board game about a concept of time, the game requires a companion application that I coded myself. You may download it down below if you are curious!</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font> | <font color=#57385c>Programming</font></b></p>
-							<p>Team composition: 5 people</p>
-							<a href="https://youtu.be/lcnv5tbs73Q" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">More</a>
+		<!-- Other prototypes
+	<article id="other-prototypes" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>Other Prototypes</h2>
+				<p style="color: #262626;">These are some of my most experimental games.</p>
+			</header>
+			<div class="row">
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Instant T" /></a>
+						<h3><a href="https://nielisson.itch.io/linstant-t-companion-app" target="_blank">Instant T</a></h3>
+						<p>Student project - 08/2020</p>
+						<p>This is a board game about a concept of time, the game requires a companion application that I coded myself. You may download it down below if you are curious!</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font> | <font color=#57385c>Programming</font></b></p>
+						<p>Team composition: 5 people</p>
+						<a href="https://youtu.be/lcnv5tbs73Q" class="button small scrolly" target="_blank">Watch</a>
+						<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">More</a>
 
-						</article>
-					</div>
+					</article>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons2.png" alt="les-sons-imaginaires" /></a>
-							<h3><a href="https://nielisson.itch.io/les-sons-imaginaires" target="_blank">Les sons imaginaires</a></h3>
-							<p>Weekly Game Jam - Week 40 - 04/2018</p>
-							<p>This world shrunk many years ago, leading to an unexpected consequence: all of the world's sound disappeared somehow.</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-							<p>Team composition: 5 people</p>
-							<a href="https://youtu.be/ioPcp6VagYI" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://nielisson.itch.io/les-sons-imaginaires" class="button small scrolly" target="_blank">Play</a>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons2.png" alt="les-sons-imaginaires" /></a>
+						<h3><a href="https://nielisson.itch.io/les-sons-imaginaires" target="_blank">Les sons imaginaires</a></h3>
+						<p>Weekly Game Jam - Week 40 - 04/2018</p>
+						<p>This world shrunk many years ago, leading to an unexpected consequence: all of the world's sound disappeared somehow.</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+						<p>Team composition: 5 people</p>
+						<a href="https://youtu.be/ioPcp6VagYI" class="button small scrolly" target="_blank">Watch</a>
+						<a href="https://nielisson.itch.io/les-sons-imaginaires" class="button small scrolly" target="_blank">Play</a>
 
-						</article>
-					</div>
+					</article>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/drilling.png" alt="Drilling for Treasure" /></a>
-							<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Drilling for Treasure</a></h3>
-							<p>Ludum Dare game jam 42 - 08/2018</p>
-							<p>As you drill your way down this unknown planet, you mine the precious minerals teeming from its core. But you’re not alone!</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-							<p>Team composition: 10 people</p>
-							<a href="https://youtu.be/fdZ3NOz8Jj0" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="button small scrolly" target="_blank">Play</a>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/drilling.png" alt="Drilling for Treasure" /></a>
+						<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Drilling for Treasure</a></h3>
+						<p>Ludum Dare game jam 42 - 08/2018</p>
+						<p>As you drill your way down this unknown planet, you mine the precious minerals teeming from its core. But you’re not alone!</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+						<p>Team composition: 10 people</p>
+						<a href="https://youtu.be/fdZ3NOz8Jj0" class="button small scrolly" target="_blank">Watch</a>
+						<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="button small scrolly" target="_blank">Play</a>
 
-						</article>
-					</div>
+					</article>
+				</div>
 
-					<div class="col-4 col-6-medium col-12-small">
-						<article class="box style2">
-							<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Mooi.png" alt="Mooi" /></a>
-							<h3><a href="https://nielisson.itch.io/mooi" target="_blank">Mooi</a></h3>
-							<p>Personal project - 05/2019</p>
-							<p>Mooi is a text-based adventure inspired by Bury Me My Love and the board game Unlock!</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Narrative and Game Design</font></b></p>
-							<p>Team composition: 3 people</p>
-							<a href="https://www.youtube.com/watch?time_continue=201&v=Nzv5QnBSpis&feature=emb_logo" class="button small scrolly" target="_blank">Watch</a>
-							<a href="https://nielisson.itch.io/mooi" class="button small scrolly" target="_blank">Play</a>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Mooi.png" alt="Mooi" /></a>
+						<h3><a href="https://nielisson.itch.io/mooi" target="_blank">Mooi</a></h3>
+						<p>Personal project - 05/2019</p>
+						<p>Mooi is a text-based adventure inspired by Bury Me My Love and the board game Unlock!</p>
+						<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Narrative and Game Design</font></b></p>
+						<p>Team composition: 3 people</p>
+						<a href="https://www.youtube.com/watch?time_continue=201&v=Nzv5QnBSpis&feature=emb_logo" class="button small scrolly" target="_blank">Watch</a>
+						<a href="https://nielisson.itch.io/mooi" class="button small scrolly" target="_blank">Play</a>
 
-						</article>
-					</div>
+					</article>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article> -->
 
 
 		<!-- SKILLS  -->
@@ -621,26 +621,6 @@
 					<p>Find out more about my <i>savoir-faire</i></p>
 				</header>
 				<div class="row aln-center">
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<!-- <span class="icon featured fa-comments"></span>//-->
-							<img src="images/icon_game.png" width="300" height="300" alt="">
-
-							<h3>Game Design</h3>
-							<br>
-							<p align="justify">
-								Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools
-								needed to create a coherent and meaningful design for different genres of games. I am also acquainted with the "coziness" concept and the
-								procedural rhetoric which I have studied in depth throughout my academic years.
-							</p>
-							<ul>
-								<li>Article: <a href="https://www.gamedeveloper.com/audio/game-jam-survival-kit" target="_blank">Game Jam Survival Kit</a></li>
-								<li><a href="https://itch.io/jams/hosted-by-nielisson" target="_blank">Game Jams </a>I hosted</li>
-
-							</ul>
-						</section>
-					</div>
-
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<span class="fab fa-unity"></span>
