--- a/gd.html
+++ b/gd.html
@@ -22,7 +22,6 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Home</a></li>
-				<li><a href="#portfolio">Art</a></li>
 				<li><a href="#gamedesign">Game Design</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#blog">Blog</a></li>
@@ -294,17 +293,13 @@
 				<section class="box style1">
 					<h3>Softwares, Tools and More</h3>
 					<ul>
-						<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator, 2D animation (Unity) and Dragon Bones</li>
-						<li><b>3D art:</b> Blender and ArmorPaint</li>
-						<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
+						<li><b>Art:</b> Adobe suite, Figma and Blender</li>
 						<li><b>Game engines:</b> Unity and Unreal Engine</li>
 						<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript (basic)</li>
 						<li><b>Project management:</b> Trello, Jira and Notion</li>
 						<li><b>Source control:</b> GitHub and SourceTree</li>
-						<li><b>VFX:</b> Pixel FX Designer, Unity's Particle System and Adobe Photoshop</li>
+						<li><b>VFX:</b> Unity's Particle System</li>
 						<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
-						<li><b>Web:</b> Github pages and Wordpress</li>
-
 
 
 					</ul>
