--- a/index.html
+++ b/index.html
@@ -672,13 +672,11 @@
 						<ul>
 							<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator, 2D animation (Unity) and Dragon Bones</li>
 							<li><b>3D art:</b> Blender and ArmorPaint</li>
-							<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
 							<li><b>Game engines:</b> Unity and Unreal Engine</li>
-							<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript (basic)</li>
 							<li><b>Project management:</b> Trello, Jira and Notion</li>
 							<li><b>Source control:</b> GitHub and SourceTree</li>
 							<li><b>VFX:</b> Pixel FX Designer, Unity's Particle System and Adobe Photoshop</li>
-							<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
+							<li><b>Video editing:</b> Adobe Première</li>
 							<li><b>Web:</b> Github pages and Wordpress</li>
 
 
@@ -686,8 +684,7 @@
 						</ul>
 
 						<p>
-							Besides these skills, I am used to the <b>agile development methodology</b>. As a game designer, I aim to create meaningful
-							and fun games as a result of a properly designed procedural rhetoric. I am also an active member of the collective <a href="https://gameimpact.fr/">Game Impact</a>
+							Besides these skills, I am used to the <b>agile development methodology</b>. I am also an active member of the collective <a href="https://gameimpact.fr/">Game Impact</a>
 							where we discuss a better and more progressive way to make meaningful games. If you want to learn more about my game design experience,
 							please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/" target="_blank">Upwork profile.</a>
 						</p>
