--- a/gd.html
+++ b/gd.html
@@ -299,7 +299,7 @@
 						<li><b>Project management:</b> Trello, Jira and Notion</li>
 						<li><b>Source control:</b> GitHub and SourceTree</li>
 						<li><b>VFX:</b> Unity's Particle System</li>
-						<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
+						<li><b>Video editing:</b> Adobe Première</li>
 
 
 					</ul>
