--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 							<span class="fab fa-unity"></span>
 							<img src="images/icon_unity.png" width="300" height="300" alt="">
 
-							<h3>Softwares, Tools and More</h3>
+							<h3>Softwares and Tools</h3>
 							<ul>
 								<li><b>2D art:</b> Photoshop, Figma, Aseprite, Illustrator, 2D animation (Unity) and Dragon Bones</li>
 								<li><b>3D art:</b> Blender and ArmorPaint</li>
