--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Nielisson Mendonça: 3D/2D Artist,UI/UX and Game Designer</title>
+		<title>Nielisson Mendonça: UI/UX designer and 3D/2D Artist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta itemprop="name" content="Nielisson Mendonça - 3D/2D Artist,UI/UX and Game Designer">
+		<meta itemprop="name" content="Nielisson Mendonça - UI/UX designer and 3D/2D Artist">
 		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/photo.png"/>
 		<meta name="description" content="I've worked on many serious games and games for console/PC. 
 		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
@@ -40,7 +40,7 @@
 						<header>
 							<h1><strong>Nielisson Mendonça</strong></h1>
 						</header>
-						<p>Game Designer and 3D/2D Artist</p>
+						<p>UI/UX designer and 3D/2D Artist</p>
 						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
 						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 
