--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<h3><a href="https://nielisson.itch.io/big-little-feud" target="_blank">Little Big Feud</a></h3>
 							<p style="font-size: small;"><i>Game Offf 2023</i></p>
 							<p>Fight back for your village as a small elf in a big world!</p>
-							<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D Art</font></b></p>
 							<p>Team composition: 4 people</p>
 							<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://nielisson.itch.io/big-little-feud" class="button small scrolly" target="_blank">Play</a>
@@ -127,7 +127,7 @@
 							<h3><a href="https://nielisson.itch.io/abuelas-space-bistro" target="_blank">Abuela's Space Bistro'</a></h3>
 							<p style="font-size: small;"><i>Game Offf 2023</i></p>
 							<p>Fight back for your village as a small elf in a big world!</p>
-							<p>Roles: <b><font color=#1a4f63>UI/UX and Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#1a4f63>UI/UX and 3D Art</font></b></p>
 							<p>Team composition: 4 people</p>
 							<a href="https://youtu.be/4nj2BWVc-8s" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://www.youtube.com/watch?v=SzrOQtFhx7U" class="button small scrolly" target="_blank">Play</a>
@@ -141,7 +141,7 @@
 							<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 							<p style="font-size: small;"><i>Brackeys Jam 2020.2 - 08/2020</i></p>
 							<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#1a4f63>Art</font></b></p>
 							<p>Team composition: 4 people</p>
 							<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play</a>
@@ -219,7 +219,7 @@
 								killed by these contaminants. Help the sea turtles on this beach by cleaning them up. In this case, the less trash on their body,
 								the better off they are.
 							</p>
-							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
+							<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: 4 people</p>
 							<a href="https://youtu.be/jwNSH8O-8lQ" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://nielisson.itch.io/sanctuary-by-the-sea" class="button small scrolly" target="_blank">Play</a>
