--- a/gd.html
+++ b/gd.html
@@ -6,14 +6,14 @@
 -->
 <html>
 	<head>
-		<title>Nielisson Mendonça: 3D/2D Artist,UI/UX and Game Designer</title>
+		<title>Nielisson Mendonça: Game Designer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta itemprop="name" content="Nielisson Mendonça - 3D/2D Artist,UI/UX and Game Designer">
+		<meta itemprop="name" content="Nielisson Mendonça - Game Designer">
 		<meta property="og:image" content="https://nielisson.github.io/images/Profile_Photo/photo.png"/>
-		<meta name="description" content="I've worked on many serious games and games for console/PC. 
-		I have a game published on Google Play Store, and I have experience with most popular tools for game development.">
+		<meta name="description" content="I've worked on many games for PC and mobile. I have a game published on Google Play Store, 
+			  and I have experience with most popular tools for game development.">
 	</head>
 	<body class="is-preload">
 
@@ -41,8 +41,8 @@
 							<h1><strong>Nielisson Mendonça</strong></h1>
 						</header>
 						<p>Game Designer and 3D/2D Artist</p>
-						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
-						<a href="documents/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
+						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+						<a href="documents/gd/CV_MENDONCA-DA-SILVA_Nielisson_2024_fr.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 								I played a key role in various aspects of the Game Design for "My Lovely Planet," with a particular focus on developing
 								engaging mini-games. Unfortunately, I cannot disclose the documents.
 							</p>
-							<p>Roles: <b><font color=#1a4f63>UI/UX and 2D Artist</font> | <font color=#f06f4f>Game Design</font></b></p>
+							<p>Roles: <b><font color=#f06f4f>Game Design</font></b></p>
 							<p>Team composition: ~12 people</p>
 							<a href="https://www.youtube.com/watch?v=doqHdscb4Yo&t=1s" class="button small scrolly" target="_blank">Watch</a>
 							<a href="https://www.mylovelyplanet.org/" class="button small scrolly" target="_blank">Play</a>
